anthos-config-management/acm-crd-examples/config-management-root/namespaces/use-cases/uc-allowed-jwt-istio/default-deny-all.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
# Copyright 2019 Google LLC. This software is provided as-is, 
# without warranty or representation for any use or purpose.#
#



kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              devtest: "true"
    - from:
        - namespaceSelector:
            matchLabels:
              appconfigmgr.cft.dev/trusted: "true"
    - from:
        - namespaceSelector:
            matchLabels:
              appconfigmgr.cft.dev/sandbox: "uc-allowed-jwt-istio"
